# FDTD

./: .gitignore  CMakeLists.txt  Ez.csv  FDTD  Plot.m  README  README.md  Schedule.txt  build  grid.txt  main.f90  plot.py  run
doc/: Doxyfile
gui/: Gui.java  GuiMain.java  grid.txt
output/: 100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  130.csv  131.csv  132.csv  133.csv  134.csv  135.csv  136.csv  137.csv  138.csv  139.csv  (+61 more)
src/: CPML.f90  FDTD.f90  Grid.f90  PrintField.f90  TFSF.f90  main.f90
